using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public static class TagManager
{
    public static string HORIZONTAL_AXIS = "Horizontal";
    public static string VERTICAL_AXIS = "Vertical";

    public static string PLAYER_MOVE_ANIMATION_PARAMETR = "isMoving";
    public static string PLAYER_IS_GROUNDED_ANIMATION_PARAMETR = "isGrounded";
    public static string PLAYER_Y_VELOCITY_PARAMETR = "yVelocity";
    public static string PLAYER_WALL_SLIDING_ANIMATION_PARAMETR = "isWallSliding";
    public static string PLAYER_WALL_DETECTED = "isWallDetected";
    public static string PLAYER_DOUBLE_JUMP_TRIGGER = "doubleJump";
    public static string PLAYER_IS_KNOCKED_PARAMETR = "isKnocked";

    public static string ENEMY_GOT_HIT_ANIMATION_TRIGGER = "gotHit";

    public static string ENEMY_APPEAR_ANIMATION_TRIGGER = "appear";
    public static string ENEMY_DISSAPEAR_ANIMATION_TRIGGER = "dissappear";
    public static string ENEMY_SHOOT_ANIMATION_TRIGGER = "shoot";

    public static string IS_WORKING_ANIMATION_PARAMETR = "isWorking";
    public static string TRAP_PRESSED_ANIMATION_TRIGGER = "pressed";

    public static string POINT_TOUCH_TRIGGER = "touch";
    public static string OBJECT_ACTIVATE_TRIGGER = "activate";

    public static string SKIN_ID_ANIMATION_PARAMETR = "skinId";

    public static string COINS_PREFS = "Coins";
    public static string GAME_DIFFICULTY_PREFS = "GameDifficulty";

    public static string PLAYER_TAG = "Player";

}
